# fragekasten

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
.sqlx/: query-044f0d2c53f05105ef33a6a4c5f28866484ad408de2cc1a781cac446425f6e04.json  query-cc65c238ba385292e340b4735081c5a8b52e410a90377dee382aca431c1c46ad.json
migrations/: 20250916200604_init.sql
src/: database.rs  discord.rs  main.rs
src/routes/: index.rs  mod.rs
src/routes/api/: mod.rs
src/routes/api/asks/: post.rs
static/: index.html
