[package]
name = "fragekasten"
authors = ["Blooym"]
description = "A simple 'ask me anything' site using Discord webhook-powered notifications."
repository = "https://codeberg.org/Blooym/fragekasten"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["http2"] }
axum-client-ip = "1.1.3"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = "0.4.42"
clap = { version = "4.5.45", features = ["derive", "env", "string"] }
dotenvy = "0.15.7"
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.23", default-features = false, features = [
    "http2",
    "rustls-tls",
    "charset",
    "system-proxy",
    "json",
] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
tower-http = { version = "0.6.6", features = [
    "catch-panic",
    "normalize-path",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
